[tool.poetry]
name = "black_isort"
version = "0.0.1"
description = "A guaranteed black compatible import sorter with minimal settings."
authors = ["Timothy Crosley <timothy.crosley@gmail.com>"]
license = "MIT"
readme = "README.md"


[tool.poetry.plugins."isort.formatters"]
black_isort = "black_isort.formatter:black_format_code"

[tool.poetry.plugins."isort.profiles"]
example = "black_isort.profile:BLACK_COMPATIBLE"

[tool.poetry.dependencies]
python = "^3.6"
isort = "^5.3.2"
black = "^19.10b0"

[tool.poetry.dev-dependencies]
vulture = "^1.0"
bandit = "^1.6"
safety = "^1.8"
isort = "^5.3"
flake8-bugbear = "^19.8"
mypy = "^0.730.0"
ipython = "^7.7"
pytest = "^5.0"
pytest-cov = "^2.7"
pytest-mock = "^1.10"
pep8-naming = "^0.8.2"
portray = "^1.3.0"
cruft = "^1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
